// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Compiling SCSS to CSS basic: basic-print-css 1`] = `
"/*!***************************************************************************************************************************************************************************************************************************************************************************************************************************!*\\
  !*** css ../../../../node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[5].use[1]!../../../../node_modules/resolve-url-loader/index.js!../../../../node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[5].use[3]!../../../../node_modules/sass-loader/dist/cjs.js??ruleSet[1].rules[5].use[4]!./scss/print.scss ***!
  \\***************************************************************************************************************************************************************************************************************************************************************************************************************************/
@media print {
  a[href]:after {
    content: " (" attr(href) ")";
  }
}
"
`;

exports[`Compiling SCSS to CSS basic: basic-screen-css 1`] = `
"/*!****************************************************************************************************************************************************************************************************************************************************************************************************************************!*\\
  !*** css ../../../../node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[5].use[1]!../../../../node_modules/resolve-url-loader/index.js!../../../../node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[5].use[3]!../../../../node_modules/sass-loader/dist/cjs.js??ruleSet[1].rules[5].use[4]!./scss/screen.scss ***!
  \\****************************************************************************************************************************************************************************************************************************************************************************************************************************/
:root {
  --color-primary: blue;
}

.button {
  display: flex;
  color: var(--color-primary);
}
.button--primary {
  color: red;
}

div {
  margin-left: 1rem;
}
"
`;

exports[`Compiling SCSS to CSS with custom per-file postcss-preset-env config: postcss-preset-env-print-css 1`] = `
"/*!***************************************************************************************************************************************************************************************************************************************************************************************************************************!*\\
  !*** css ../../../../node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[5].use[1]!../../../../node_modules/resolve-url-loader/index.js!../../../../node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[5].use[3]!../../../../node_modules/sass-loader/dist/cjs.js??ruleSet[1].rules[5].use[4]!./scss/print.scss ***!
  \\***************************************************************************************************************************************************************************************************************************************************************************************************************************/
@media print {
  a[href]:after {
    content: " (" attr(href) ")";
  }
  div {
    margin-top: 0;
  }
}
"
`;

exports[`Compiling SCSS to CSS with custom per-file postcss-preset-env config: postcss-preset-env-screen-css 1`] = `
"/*!****************************************************************************************************************************************************************************************************************************************************************************************************************************!*\\
  !*** css ../../../../node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[5].use[1]!../../../../node_modules/resolve-url-loader/index.js!../../../../node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[5].use[3]!../../../../node_modules/sass-loader/dist/cjs.js??ruleSet[1].rules[5].use[4]!./scss/screen.scss ***!
  \\****************************************************************************************************************************************************************************************************************************************************************************************************************************/
div {
  height: 25ch;
  padding-bottom: 1rem;
}
"
`;

exports[`Compiling SCSS to CSS with purgecss: purgecss-screen-css 1`] = `
"/*!****************************************************************************************************************************************************************************************************************************************************************************************************************************!*\\
  !*** css ../../../../node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[5].use[1]!../../../../node_modules/resolve-url-loader/index.js!../../../../node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[5].use[3]!../../../../node_modules/sass-loader/dist/cjs.js??ruleSet[1].rules[5].use[4]!./scss/screen.scss ***!
  \\****************************************************************************************************************************************************************************************************************************************************************************************************************************/
h2 {
  font-size: 2rem;
}

.purgecss-should-not-remove {
  background-color: red;
}
"
`;
